# simsimd

./: .gitignore  CMakeLists.txt  LICENSE  README.md  _config.yml  main.mk  makefile
doc/: block_diagram.vsd  simsimd.pptx
simd_common/: CMakeLists.txt  sub.mk
simd_common/include/: simd_common.h  simd_conv_ptree.h  simd_hash_ptree.h  simd_ptree_time.h
simd_common/src/: simd_common.cpp  simd_conv_ptree.cpp  simd_main.cpp
simd_dump/: CMakeLists.txt  sub.mk
simd_dump/include/: simd_dump.h  simd_dump_vec_wr.h
simd_dump/src/: simd_dump.cpp  simd_dump_vec_wr.cpp
simd_pref/: CMakeLists.txt  sub.mk
simd_pref/include/: simd_pref.h
simd_pref/src/: simd_pref.cpp
simd_report/: CMakeLists.txt  sub.mk
simd_report/include/: simd_assert.h  simd_report.h
simd_report/src/: simd_report.cpp
simd_sys_bmux/: sub.mk
simd_sys_bmux/include/: simd_sys_bmux.h
simd_sys_bmux/src/: simd_sys_bmuxr.cpp  simd_sys_bmuxw.cpp  simd_sys_event.cpp
simd_sys_core/: CMakeLists.txt  sub.mk
simd_sys_core/include/: simd_chn_dmeu_data.h  simd_ptree_xbar.h  simd_sig_dmeu_data.h  simd_sig_dmeu_ready.h  simd_sig_dmeu_state.h  simd_sig_dmeu_valid.h  simd_sig_ptree.h  simd_sys_core.h  simd_sys_dmeu.h
simd_sys_core/src/: simd_chn_dmeu_data.cpp  simd_ptree_xbar.cpp  simd_sig_dmeu_data.cpp  simd_sig_dmeu_ready.cpp  simd_sig_dmeu_state.cpp  simd_sig_dmeu_valid.cpp  simd_sig_ptree.cpp  simd_sys_core.cpp  simd_sys_dmeu.cpp  simd_sys_dmeu_new.cpp
simd_sys_crm/: CMakeLists.txt  sub.mk
simd_sys_crm/include/: simd_sys_crm.h
simd_sys_crm/src/: simd_sys_crm.cpp
simd_sys_dm/: CMakeLists.txt  sub.mk
simd_sys_dm/include/: simd_sig_dm_addr.h  simd_sys_dm_ag.h  simd_sys_dm_init.h  simd_sys_dm_ram_1r1w.h  simd_sys_dm_ram_1rw.h
simd_sys_dm/src/: simd_sig_dm_addr.cpp  simd_sys_dm_ag.cpp  simd_sys_dm_init.cpp  simd_sys_dm_ram_1r1w.cpp  simd_sys_dm_ram_1rw.cpp
simd_sys_eu/: CMakeLists.txt  sub.mk
simd_sys_eu/include/: simd_sys_eu_add_sub_2.h  simd_sys_eu_transp_a_1.h  simd_sys_eu_transp_s_1.h
simd_sys_eu/src/: simd_sys_eu_add_sub_2.cpp  simd_sys_eu_transp_a_1.cpp  simd_sys_eu_transp_s_1.cpp
simd_sys_pool/: CMakeLists.txt  sub.mk
simd_sys_pool/include/: simd_sys_pool.h
simd_sys_scalar/: CMakeLists.txt  sub.mk
simd_sys_stream/: CMakeLists.txt  sub.mk
simd_sys_xbar/: CMakeLists.txt  sub.mk
simd_systemc/: CMakeLists.txt  sub.mk
simd_time/: CMakeLists.txt  sub.mk
simd_trace/: CMakeLists.txt  sub.mk
(+45 files in other folders)
